<resources>
    <string name="app_name">test</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">test001</string>
    <string name="info">APP登录界面</string>
    <string name="username">用户名：</string>
    <string name="passwd">用户密码：</string>
    <string name="register">登录</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_passwd">请输入密码</string>
    <string name="unregister">zzzzzzzzzzzz</string>
    <string name="registered">程序已登录</string>
    <string name="unsuccessed">无效用户名或密码</string>
    <string name="successed">恭喜您！登录成功</string>
    <string name="nulltype">用户名为空</string>
</resources>
